# claude-limit-watchdog

./: .gitignore  .taplo.toml  Cargo.toml  Justfile  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  ports.rs  watch_service.rs
crates/apps/cli/: Cargo.toml
crates/apps/cli/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/components/watchdog/: Cargo.toml
crates/components/watchdog/adapters/: Cargo.toml
crates/components/watchdog/adapters/src/: lib.rs
crates/components/watchdog/adapters/src/primary/: mod.rs
crates/components/watchdog/adapters/src/primary/configsetup/: mod.rs
crates/components/watchdog/adapters/src/primary/configsetup/stdio/: mod.rs
crates/components/watchdog/adapters/src/primary/lifecycle/: mod.rs
crates/components/watchdog/adapters/src/primary/lifecycle/signal/: mod.rs
crates/components/watchdog/adapters/src/secondary/: mod.rs
crates/components/watchdog/adapters/src/secondary/clock/: mod.rs
crates/components/watchdog/adapters/src/secondary/clock/system/: mod.rs
crates/components/watchdog/adapters/src/secondary/panecontrol/: mod.rs
crates/components/watchdog/adapters/src/secondary/panecontrol/tmux/: mod.rs
crates/components/watchdog/adapters/src/secondary/settingspersistence/: mod.rs
crates/components/watchdog/adapters/src/secondary/settingspersistence/yaml/: dto.rs  mapper.rs  mod.rs  paths.rs  repository.rs
crates/components/watchdog/adapters/src/secondary/usagelog/: mod.rs
crates/components/watchdog/adapters/src/secondary/usagelog/filesystem/: mod.rs
crates/components/watchdog/adapters/src/secondary/userpresentation/: mod.rs
crates/components/watchdog/adapters/src/secondary/userpresentation/stdio/: mod.rs
crates/components/watchdog/core/: Cargo.toml
crates/components/watchdog/core/src/: lib.rs
crates/components/watchdog/core/src/application/: mod.rs  ports.rs  settings.rs  usage_report.rs  watch_service.rs
crates/components/watchdog/core/src/domain/: menu.rs  mod.rs  usage.rs
crates/components/watchdog/src/: lib.rs
crates/components/watchdog/src/adapters/: mod.rs
crates/components/watchdog/src/adapters/primary/: ctrlc.rs  mod.rs  wizard.rs
crates/components/watchdog/src/adapters/secondary/: clock.rs  mod.rs  presenter.rs  settings_store.rs  tmux.rs  usage_log.rs
crates/components/watchdog/src/core/: mod.rs
crates/components/watchdog/src/core/application/: mod.rs  ports.rs  settings.rs  usage_report.rs  watch_service.rs
crates/components/watchdog/src/core/domain/: mod.rs  parser.rs  usage.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  parser.rs  reset_time.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: clock.rs  lib.rs  presenter.rs  stop.rs  tmux.rs
