[package]
name         = "clw-application"
description  = "Application layer: ports (traits) + use cases for the watchdog loop."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
clw-domain = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
mockall    = { workspace = true, optional = true }

[dev-dependencies]
mockall  = { workspace = true }
rstest   = { workspace = true }

[features]
# Enabled in tests to expose mockall-generated fakes for the ports.
test-support = ["dep:mockall"]

[lints]
workspace = true
