[package]
name         = "clw-domain"
description  = "Pure domain types and parsing logic for claude-limit-watchdog. No IO."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
jiff      = { workspace = true }
regex     = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest    = { workspace = true }
proptest  = { workspace = true }
insta     = { workspace = true }

[lints]
workspace = true
