[package]
name         = "clw-infrastructure"
description  = "Adapters that implement the application ports against the real world (tmux, clock, terminal)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
clw-domain      = { workspace = true }
clw-application = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
ctrlc           = { workspace = true }
jiff            = { workspace = true }

[lints]
workspace = true
